@startuml

title __ENTITIES's Class Diagram__\n

  namespace org.pneditor.petrinet {
    namespace model.entities {
      class org.pneditor.petrinet.model.entities.Arc {
          {static} - LOGGER : Logger
          - in : boolean
          - weight : int
          + Arc()
          + Arc()
          + getConnectedPlace()
          + getWeight()
          + isAvailable()
          + isIn()
          + setConnectedPlace()
          + setIn()
          + setWeight()
          + toString()
      }
    }
  }
  

  namespace org.pneditor.petrinet {
    namespace model.entities {
      class org.pneditor.petrinet.model.entities.Place {
          - id : int
          - tokens : int
          + Place()
          + Place()
          + addTokens()
          + deleteTokens()
          + getId()
          + getTokens()
          + setId()
          + setTokens()
      }
    }
  }
  

  namespace org.pneditor.petrinet {
    namespace model.entities {
      class org.pneditor.petrinet.model.entities.Transition {
          - available : boolean
          - id : int
          - inArcs : List<Arc>
          - outArcs : List<Arc>
          + Transition()
          + Transition()
          + addInArc()
          + addOutArc()
          + equals()
          + getId()
          + getInArcs()
          + getOutArcs()
          + hashCode()
          + isAvailable()
          + replaceInArc()
          + replaceoutArc()
          + setArcWeight()
          + setAvailable()
          + setId()
          + setInArcs()
          + setOutArcs()
      }
    }
  }
  

  namespace org.pneditor.petrinet {
    namespace model.entities {
      class org.pneditor.petrinet.model.entities.ViderArc {
          + ViderArc()
          + clearPlace()
          + isAvailable()
      }
    }
  }
  

  namespace org.pneditor.petrinet {
    namespace model.entities {
      class org.pneditor.petrinet.model.entities.ZeroArc {
          + ZeroArc()
          + isAvailable()
          + isPlaceEmpty()
      }
    }
  }
  

  org.pneditor.petrinet.model.entities.Arc o-- org.pneditor.petrinet.model.entities.Place : connectedPlace
  org.pneditor.petrinet.model.entities.ViderArc -up-|> org.pneditor.petrinet.model.entities.Arc
  org.pneditor.petrinet.model.entities.ZeroArc -up-|> org.pneditor.petrinet.model.entities.Arc


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
